--- a/css/style.css
+++ b/css/style.css
@@ -1140,6 +1140,149 @@ footer .support .links a i {
   color: #777;
 }
 
+.worldMap {
+  width: 500px;
+  height: 500px;
+  order: 2;
+  position: relative;
+}
+.worldMap .earth {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 80%;
+  margin: -40%;
+  background: #fff url(../img/map.webp) 0 50% repeat-x;
+  background-size: auto 90%;
+  box-shadow: rgba(0, 0, 0, 0.0509803922) 0 50px 60px;
+  border-radius: 100%;
+  overflow: hidden;
+  -webkit-animation: map linear 90s infinite;
+          animation: map linear 90s infinite;
+}
+.worldMap .orbic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.worldMap .orbic svg {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+.worldMap #orbic_path {
+  fill: none;
+  stroke: rgba(0, 0, 0, 0.1);
+  stroke-linecap: round;
+  stroke-width: 4px;
+  stroke-dasharray: 1 9;
+  -webkit-animation: orbic linear 2s infinite;
+          animation: orbic linear 2s infinite;
+}
+.worldMap #orbic_dots use {
+  fill: #fff;
+  stroke: rgba(30, 144, 255, 0.25);
+  stroke-width: 4;
+  -webkit-animation: dots ease 1s infinite alternate;
+          animation: dots ease 1s infinite alternate;
+}
+.worldMap #orbic_dot1 {
+  transform: translate(50.4%, 29.6%);
+}
+.worldMap #orbic_dot2 {
+  transform: translate(5%, 62.8%);
+  -webkit-animation-delay: 0.2s !important;
+          animation-delay: 0.2s !important;
+}
+.worldMap #orbic_dot3 {
+  transform: translate(97%, 41%);
+  -webkit-animation-delay: 0.3s !important;
+          animation-delay: 0.3s !important;
+}
+.worldMap #orbic_dot4 {
+  transform: translate(50%, 70.2%);
+  -webkit-animation-delay: 0.5s !important;
+          animation-delay: 0.5s !important;
+}
+.worldMap #orbic_dot5 {
+  transform: translate(31.5%, 51.5%);
+  -webkit-animation-delay: 0.7s !important;
+          animation-delay: 0.7s !important;
+}
+.worldMap #orbic_user1 {
+  transform: translate(1%, 40%) scale(0.666667);
+}
+.worldMap #orbic_user2 {
+  transform: translate(18%, 64%) scale(0.666667);
+}
+.worldMap #orbic_user3 {
+  transform: translate(39.5%, 31%) scale(0.666667);
+}
+.worldMap #orbic_user4 {
+  transform: translate(69%, 22%) scale(0.666667);
+}
+.worldMap #orbic_user5 {
+  transform: translate(75%, 53%) scale(0.666667);
+}
+@-webkit-keyframes map {
+  100% {
+    background-position: 220% 50%;
+  }
+}
+@keyframes map {
+  100% {
+    background-position: 220% 50%;
+  }
+}
+@-webkit-keyframes orbic {
+  100% {
+    stroke-dashoffset: 10;
+  }
+}
+@keyframes orbic {
+  100% {
+    stroke-dashoffset: 10;
+  }
+}
+@-webkit-keyframes dots {
+  100%, 80% {
+    stroke: #1e90ff;
+  }
+}
+@keyframes dots {
+  100%, 80% {
+    stroke: #1e90ff;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .worldMap {
+    width: 100%;
+    order: 2;
+    position: relative;
+  }
+  .worldMap .earth {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: transparent;
+    background-size: 100% auto;
+    box-shadow: none;
+    border-radius: 0;
+    -webkit-animation: none;
+            animation: none;
+  }
+}
+@media (max-width: 600px) {
+  .worldMap {
+    height: 300px;
+  }
+}
+
 /* PC device :992px. */
 @media (min-width: 992px) {
   body {
