--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,6 @@ input {
   accent-color: var(--mainColor) !important;
 }
 
-.form-control {
-  min-height: 48px;
-  box-shadow: none !important;
-  color: #777;
-}
-
 .odometer-inside {
   direction: ltr !important;
 }
@@ -176,7 +170,7 @@ input {
 }
 
 content {
-  width: min(100% - 20px, 1320px);
+  width: min(100% - 40px, 1320px);
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -1140,13 +1134,184 @@ footer .support .links a i {
   color: #777;
 }
 
-.worldMap {
-  width: 500px;
-  height: 500px;
-  order: 2;
+.contactUs {
+  padding: 50px 0;
+}
+@media (max-width: 768px) {
+  .contactUs {
+    padding: 0;
+  }
+}
+.contactUs .contact {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+@media (max-width: 768px) {
+  .contactUs .contact {
+    gap: 32px;
+    margin-bottom: 30px;
+  }
+}
+.contactUs .contact .col {
+  flex: 1;
+  display: flex;
+  position: relative;
+  gap: 16px;
+  padding: 48px 24px;
+  border-radius: 16px;
+  background-color: var(--whiteColor);
+  box-shadow: var(--BigShadow);
+}
+.contactUs .contact .col::before {
+  position: absolute;
+  content: "";
+  width: 90%;
+  height: 100%;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 12px;
+  background-color: var(--mainColor30);
+  z-index: -1;
+}
+.contactUs .contact .col::after {
+  position: absolute;
+  content: "";
+  width: 80%;
+  height: 100%;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 12px;
+  background-color: var(--mainColor10);
+  z-index: -2;
+}
+.contactUs .contact .col .icon {
+  min-width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--mainColor10);
+  border-radius: 100px;
+  margin: auto 0;
+  isolation: isolate;
   position: relative;
 }
-.worldMap .earth {
+.contactUs .contact .col .icon svg path {
+  transition: var(--transition);
+}
+.contactUs .contact .col .icon::after {
+  position: absolute;
+  content: "";
+  width: 0%;
+  height: 0%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 100px;
+  background-color: var(--mainColor);
+  z-index: -1;
+  transition: 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+.contactUs .contact .col .data {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.contactUs .contact .col .data h4 {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.contactUs .contact .col .data a {
+  color: var(--textColor);
+  min-width: 100px;
+}
+.contactUs .contact .col .data .info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+.contactUs .contact .col .data .info a {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  gap: 8px;
+}
+.contactUs .contact .col .data .info svg {
+  width: 20px;
+  height: 20px;
+}
+.contactUs .contact .col:hover .icon svg path {
+  fill: #fff;
+}
+.contactUs .contact .col:hover .icon::after {
+  width: 100%;
+  height: 100%;
+}
+.contactUs .contactForm {
+  display: flex;
+  gap: 32px;
+  margin-bottom: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+@media (max-width: 768px) {
+  .contactUs .contactForm {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 16px;
+  }
+}
+.contactUs .contactForm form {
+  flex: 1;
+  background-color: var(--whiteColor);
+  padding: 48px 32px;
+  border-radius: 16px;
+  margin-bottom: 30px;
+  box-shadow: var(--BigShadow);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  max-width: 500px;
+  width: 100%;
+}
+.contactUs .contactForm form .inputFeild {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.contactUs .contactForm form .inputFeild label {
+  color: var(--blackColor);
+}
+.contactUs .contactForm form .inputFeild textarea,
+.contactUs .contactForm form .inputFeild input {
+  min-height: 48px;
+  box-shadow: none !important;
+  color: var(--textColor);
+  padding: 8px 12px;
+  border: 1px solid #eee !important;
+}
+.contactUs .contactForm form .col {
+  flex: 1;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+.contactUs .contactForm form .col .inputFeild {
+  flex: 1;
+}
+.contactUs .contactForm form .btn {
+  justify-content: center;
+}
+.contactUs .contactForm .worldMap {
+  width: 500px;
+  height: 500px;
+  position: relative;
+}
+.contactUs .contactForm .worldMap .earth {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1161,19 +1326,19 @@ footer .support .links a i {
   -webkit-animation: map linear 90s infinite;
           animation: map linear 90s infinite;
 }
-.worldMap .orbic {
+.contactUs .contactForm .worldMap .orbic {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.worldMap .orbic svg {
+.contactUs .contactForm .worldMap .orbic svg {
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
-.worldMap #orbic_path {
+.contactUs .contactForm .worldMap #orbic_path {
   fill: none;
   stroke: rgba(0, 0, 0, 0.1);
   stroke-linecap: round;
@@ -1182,49 +1347,49 @@ footer .support .links a i {
   -webkit-animation: orbic linear 2s infinite;
           animation: orbic linear 2s infinite;
 }
-.worldMap #orbic_dots use {
+.contactUs .contactForm .worldMap #orbic_dots use {
   fill: #fff;
   stroke: rgba(30, 144, 255, 0.25);
   stroke-width: 4;
   -webkit-animation: dots ease 1s infinite alternate;
           animation: dots ease 1s infinite alternate;
 }
-.worldMap #orbic_dot1 {
+.contactUs .contactForm .worldMap #orbic_dot1 {
   transform: translate(50.4%, 29.6%);
 }
-.worldMap #orbic_dot2 {
+.contactUs .contactForm .worldMap #orbic_dot2 {
   transform: translate(5%, 62.8%);
   -webkit-animation-delay: 0.2s !important;
           animation-delay: 0.2s !important;
 }
-.worldMap #orbic_dot3 {
+.contactUs .contactForm .worldMap #orbic_dot3 {
   transform: translate(97%, 41%);
   -webkit-animation-delay: 0.3s !important;
           animation-delay: 0.3s !important;
 }
-.worldMap #orbic_dot4 {
+.contactUs .contactForm .worldMap #orbic_dot4 {
   transform: translate(50%, 70.2%);
   -webkit-animation-delay: 0.5s !important;
           animation-delay: 0.5s !important;
 }
-.worldMap #orbic_dot5 {
+.contactUs .contactForm .worldMap #orbic_dot5 {
   transform: translate(31.5%, 51.5%);
   -webkit-animation-delay: 0.7s !important;
           animation-delay: 0.7s !important;
 }
-.worldMap #orbic_user1 {
+.contactUs .contactForm .worldMap #orbic_user1 {
   transform: translate(1%, 40%) scale(0.666667);
 }
-.worldMap #orbic_user2 {
+.contactUs .contactForm .worldMap #orbic_user2 {
   transform: translate(18%, 64%) scale(0.666667);
 }
-.worldMap #orbic_user3 {
+.contactUs .contactForm .worldMap #orbic_user3 {
   transform: translate(39.5%, 31%) scale(0.666667);
 }
-.worldMap #orbic_user4 {
+.contactUs .contactForm .worldMap #orbic_user4 {
   transform: translate(69%, 22%) scale(0.666667);
 }
-.worldMap #orbic_user5 {
+.contactUs .contactForm .worldMap #orbic_user5 {
   transform: translate(75%, 53%) scale(0.666667);
 }
 @-webkit-keyframes map {
@@ -1257,13 +1422,18 @@ footer .support .links a i {
     stroke: #1e90ff;
   }
 }
-@media only screen and (max-width: 1000px) {
-  .worldMap {
+@media only screen and (max-width: 992px) {
+  .contactUs .contactForm .worldMap {
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (max-width: 768px) {
+  .contactUs .contactForm .worldMap {
     width: 100%;
-    order: 2;
     position: relative;
   }
-  .worldMap .earth {
+  .contactUs .contactForm .worldMap .earth {
     top: 0;
     left: 0;
     width: 100%;
@@ -1277,10 +1447,19 @@ footer .support .links a i {
             animation: none;
   }
 }
-@media (max-width: 600px) {
-  .worldMap {
+@media (max-width: 476px) {
+  .contactUs .contactForm .worldMap {
     height: 300px;
   }
+}
+.contactUs .map {
+  padding: 0px;
+  border-radius: 24px;
+  margin-top: 80px;
+  width: 100%;
+  height: 400px;
+  border: 6px solid var(--whiteColor);
+  box-shadow: var(--BigShadow);
 }
 
 /* PC device :992px. */
