--- a/css/style.css
+++ b/css/style.css
@@ -1449,7 +1449,7 @@ footer .support .links a i {
 }
 @media (max-width: 476px) {
   .contactUs .contactForm .worldMap {
-    height: 300px;
+    height: 240px;
   }
 }
 .contactUs .map {
@@ -1460,6 +1460,11 @@ footer .support .links a i {
   height: 400px;
   border: 6px solid var(--whiteColor);
   box-shadow: var(--BigShadow);
+}
+@media (max-width: 476px) {
+  .contactUs .map {
+    margin-top: 24px;
+  }
 }
 
 /* PC device :992px. */
