--- a/css/style.scss
+++ b/css/style.scss
@@ -1337,7 +1337,7 @@ footer {
         }
       }
       @media (max-width: 476px) {
-        height: 300px;
+        height: 240px;
       }
     }
   }
@@ -1350,6 +1350,9 @@ footer {
     height: 400px;
     border: 6px solid var(--whiteColor);
     box-shadow: var(--BigShadow);
+    @media (max-width: 476px) {
+      margin-top: 24px;
+    }
   }
 }
 
