--- a/css/style.scss
+++ b/css/style.scss
@@ -146,7 +146,7 @@ input {
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 content {
-  width: min(100% - 40px, 1320px);
+  // width: min(100% - 40px, 1320px);
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -159,10 +159,12 @@ header {
   left: 0;
   width: 100%;
   z-index: 1024;
-  margin-bottom: 20px;
   transition: var(--transition);
   backdrop-filter: blur(4px);
   background-color: #ffffff30;
+  @media (max-width: 576px) {
+    background-color: #ffffff;
+  }
   nav {
     width: min(100% - 20px, 1320px);
     display: flex;
@@ -177,7 +179,7 @@ header {
         transition: var(--transition);
         width: 100%;
         object-fit: contain;
-        @media (max-width: 480px) {
+        @media (max-width: 576px) {
           height: 30px;
         }
       }
@@ -316,11 +318,17 @@ header {
   padding: 0 5px;
   background-color: var(--whiteColor);
 }
+
 .mainAtropos {
   position: relative;
-  height: 500px;
-  @media (max-width: 768px) {
-    height: 400px;
+  height: 520px;
+  width: min(100% - 40px, 1320px);
+  margin: 0 auto;
+  margin-top: 20px;
+  @media (max-width:576px) {
+    width: 100%;
+    margin-top: -66px;
+    height: 100vh;
   }
   .atropos-inner {
     position: relative;
@@ -333,6 +341,9 @@ header {
     margin-bottom: 50px;
     color: var(--whiteColor);
     gap: 16px;
+    @media (max-width:576px) {
+      border-radius: 0px;
+    }
     h1 {
       font-weight: bold;
       max-width: 600px;
@@ -369,7 +380,7 @@ header {
         bottom: 0px;
         left: 0%;
         z-index: 1;
-        background: linear-gradient(-45deg, #1f1f1fe1, #1f1f1faf);
+        background: linear-gradient(-45deg, #1f1f1fd0, #1f1f1f86);
         width: 100%;
         height: 100%;
       }
@@ -379,6 +390,15 @@ header {
         object-fit: cover;
       }
     }
+  }
+  .swiper-pagination-bullet{
+    background-color: var(--whiteColor);
+    transition: var(--transition);
+    border-radius: 100px;
+
+  }
+  .swiper-pagination-bullet-active{
+    width: 30px;
   }
 }
 .title {
@@ -435,6 +455,8 @@ header {
   }
 }
 .services {
+  width: min(100% - 40px, 1320px);
+  margin: 0 auto;
   padding: 30px 0;
   @media (max-width: 768px) {
     padding-bottom: 0;
@@ -559,6 +581,8 @@ header {
   }
 }
 .references {
+  width: min(100% - 40px, 1320px);
+  margin: 0 auto;
   .swiper-slide {
     width: auto;
   }
@@ -980,6 +1004,7 @@ footer {
   display: flex;
   gap: 16px;
   flex-wrap: wrap;
+  margin-top: 20px;
   .col {
     flex: 1;
     min-width: 300px;
@@ -1054,6 +1079,8 @@ footer {
 }
 .contactUs {
   padding: 50px 0;
+  width: min(100% - 40px, 1320px);
+  margin: 0 auto;
   @media (max-width: 768px) {
     padding: 0;
   }
