--- a/css/style.scss
+++ b/css/style.scss
@@ -174,14 +174,17 @@ header {
     gap: 16px;
     .logo {
       margin: auto 0;
+      display: block;
+      height: 40px;
       img {
-        height: 40px;
+        height: 100%;
         transition: var(--transition);
-        width: 100%;
         object-fit: contain;
-        @media (max-width: 576px) {
-          height: 30px;
-        }
+        object-position: start;
+        object-position: right;
+      }
+      @media (max-width: 576px) {
+        height: 30px;
       }
     }
     .navMenu {
